Created inventory entry api
